# Uxarion-CLI

./: .gitignore  NOTICE  README.md  README_AI_AGENT.md  README_SUNO.md  docker-compose.yml  install.sh  login.html  orchestration_flow.md  pawn.py  plan.json  pown_cli.py  pyproject.toml  requirements.txt  run_result.json  setup.sh  sqli1.html  start_pown.sh  start_uxarion.sh  start_zevionx.sh  uxarion.py  uxarion_cli.py  zevionx.py  zevionx_cli.py
pown_cli/: __init__.py  main_cli.py  utils.py
pown_cli/agents/: __init__.py
pown_cli/core/: __init__.py  agent_core.py  orchestrator.py
pown_cli/tools/: __init__.py  sandbox.py
pown_cli/ui/: __init__.py  chat_ui.py  claude_style_ui.py  interactive_ui.py  sse_api.py  terminal_ui.py
suno_app/: __init__.py  app.py
suno_app/documents/: account-summary.txt
tests/: test_key_flow.py  test_prompt.py  test_update_check.py
uxarion_cli/: __init__.py  main_cli.py  update_check.py  utils.py
uxarion_cli/agents/: __init__.py
uxarion_cli/core/: __init__.py  agent_core.py  orchestrator.py
uxarion_cli/tools/: __init__.py  sandbox.py
uxarion_cli/ui/: __init__.py  chat_ui.py  interactive_ui.py  terminal_ui.py
zevionx_cli/: __init__.py  main_cli.py  utils.py
zevionx_cli/agents/: __init__.py
zevionx_cli/core/: __init__.py  agent_core.py  orchestrator.py
zevionx_cli/tools/: __init__.py  sandbox.py
zevionx_cli/ui/: __init__.py  chat_ui.py  interactive_ui.py  terminal_ui.py
